--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -95,37 +95,34 @@ parts:
     prime:
       - recipe-version
 
-  ppa-setup:
+  mir:
     plugin: nil
-    override-pull: |
-      sudo apt --assume-yes install software-properties-common
-      sudo add-apt-repository -y ppa:mir-team/release
-      snapcraftctl pull
+    stage-snaps:
+    - mir-core20
+    prime:
+    - -*.h
+    - -*.pc
+    - -share
 
   egmde:
-    after: [recipe-version, ppa-setup]
+    after: [recipe-version, mir]
+    source: https://github.com/AlanGriffiths/egmde.git
     override-pull: |
       snapcraftctl pull
       server_version=`git rev-list --count HEAD`
-      mir_version=`LANG=C apt-cache policy mir-graphics-drivers-desktop | sed -rne 's/^\s+Candidate:\s+([^-]*)-.+$/\1/p'`
+      mir_version=$( sed -rne 's/^version:\s+([^-]*)-.+$/\1/p' ${SNAPCRAFT_STAGE}/meta.mir-core20/snap.yaml )
       recipe_version=`cat $SNAPCRAFT_STAGE/recipe-version`
       snapcraftctl set-version $server_version-mir$mir_version-snap$recipe_version
       if echo $mir_version | grep -e '+dev' -e '~rc' -q; then snapcraftctl set-grade devel; else snapcraftctl set-grade stable; fi
     plugin: cmake
-    source: https://github.com/AlanGriffiths/egmde.git
-    override-build: |
-      sudo apt install --assume-yes libmiral-dev
-      snapcraftctl build
     build-packages:
-    - pkg-config
-    - libmiral-dev
     - libboost-filesystem-dev
-    - libfreetype6-dev
-    - libwayland-dev
-    - libxkbcommon-dev
+    build-environment:
+    - LD_LIBRARY_PATH: ${SNAPCRAFT_STAGE}/usr/lib/${SNAPCRAFT_ARCH_TRIPLET}
+    override-build: |
+      sed -i 's@/root/stage/root/stage@/root/stage@' ${SNAPCRAFT_STAGE}/usr/lib/${SNAPCRAFT_ARCH_TRIPLET}/pkgconfig/*.pc
+      snapcraftctl build
     stage-packages:
-      - libmiral4
-      - mir-graphics-drivers-desktop
       - libfreetype6
       - fonts-freefont-ttf
     stage:
